Records: Enable preview features in serializable record tests