@@ -24,8 +24,9 @@
 /*
  * @test
  * @summary Verifies that privileged operations performed in the record
- *          constructor throw, when run without the required permissions.
- * @run testng/othervm/java.security.policy=empty_security.policy ConstructorPermissionTest
+ *          constructor throw, when run without the required permissions
+ * @compile --enable-preview -source 14 ConstructorPermissionTest.java
+ * @run testng/othervm/java.security.policy=empty_security.policy --enable-preview ConstructorPermissionTest
  */
 
 import java.io.ByteArrayInputStream;
