@@ -23,9 +23,10 @@
 
 /*
  * @test
- * @summary Ensures basic behavior of cycles from record components.
- * @run testng CycleTest
- * @run testng/othervm/java.security.policy=empty_security.policy CycleTest
+ * @summary Ensures basic behavior of cycles from record components
+ * @compile --enable-preview -source 14 CycleTest.java
+ * @run testng/othervm --enable-preview CycleTest
+ * @run testng/othervm/java.security.policy=empty_security.policy --enable-preview CycleTest
  */
 
 import java.io.ByteArrayInputStream;
